third_party/move/move-compiler-v2/tests/checking-lang-v2.2/lambda/inline-parity/shadowing.exp

Diagnostics:
error: captured variable `_x` cannot be modified inside of a lambda
   ┌─ tests/checking-lang-v2.2/lambda/inline-parity/shadowing.move:12:13
   │
12 │             _x = y  // We expect this to assign 3 via foo if renaming works correctly. If not it would
   │             ^^
